--- a/package.json
+++ b/package.json
@@ -17,91 +17,61 @@
     "email": "email dev --dir emails --port 3333"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.1.0",
-    "@next-auth/prisma-adapter": "^1.0.6",
+    "@clerk/nextjs": "^4.29.7",
+    "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^4.16.2",
-    "@radix-ui/react-accessible-icon": "^1.0.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-toggle-group": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@stripe/react-stripe-js": "^1.16.5",
-    "@stripe/stripe-js": "^1.44.1",
-    "@studio-freight/lenis": "^1.0.39",
-    "@t3-oss/env-nextjs": "^0.2.2",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vercel/analytics": "^1.0.0",
-    "@vercel/og": "^0.0.21",
-    "class-variance-authority": "^0.4.0",
+    "@studio-freight/lenis": "^1.0.40",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "@tanstack/react-query": "^4.29.19",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.13",
+    "@types/react-dom": "18.2.6",
+    "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^0.2.1",
-    "date-fns": "^3.3.1",
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^11.0.14",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
-    "lucide-react": "^0.338.0",
-    "micro": "^10.0.1",
-    "micro-cors": "^0.1.1",
-    "next": "13.4.0",
-    "next-auth": "4.22.1",
+    "lucide-react": "^0.358.0",
+    "next": "14.1.0",
     "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.10",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "resend": "^3.2.0",
-    "sharp": "^0.33.2",
-    "stripe": "^11.18.0",
-    "tailwind-merge": "^2.2.1",
+    "react-intersection-observer": "^9.5.2",
+    "sharp": "^0.32.1",
+    "stripe": "^12.12.0",
+    "svix": "^1.4.12",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
-    "vaul": "^0.9.0",
+    "typescript": "5.1.3",
+    "uploadthing": "^5.1.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/micro-cors": "^0.1.3",
-    "@types/node": "^18.16.0",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "autoprefixer": "latest",
+    "eslint": "latest",
     "eslint-config-next": "14.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-tailwindcss": "^3.14.3",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "pretty-quick": "^4.0.0",
-    "prisma": "^4.13.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "4.7.4"
+    "postcss": "latest",
+    "pretty-quick": "^3.1.3",
+    "prisma": "^4.16.2",
+    "tailwindcss": "latest",
+    "typescript": "latest"
   }
 }
