--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "turbo": "next dev --turbo",
     "start": "next start",
     "lint": "next lint",
     "preview": "next build && next start",
     "postinstall": "prisma generate",
-    "email": "email dev --dir emails --port 3333"
+    "email": "email dev --dir emails --port 3333",
+    "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe/webhooks"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.5.0",
     "@clerk/nextjs": "^4.29.7",
     "@hookform/resolvers": "^3.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -26,8 +29,11 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@stripe/stripe-js": "^3.0.10",
     "@studio-freight/lenis": "^1.0.40",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^4.29.19",
@@ -39,9 +45,12 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.14",
     "gsap": "^3.12.5",
+    "http-status-codes": "^2.3.0",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.358.0",
+    "micro-cors": "^0.1.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,13 +59,13 @@
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.5.2",
     "sharp": "^0.32.1",
-    "stripe": "^12.12.0",
+    "sonner": "^1.4.3",
+    "stripe": "^12.18.0",
     "svix": "^1.21.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.3",
-    "uploadthing": "^5.1.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
