--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe/webhooks"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.5.0",
-    "@clerk/nextjs": "^4.29.7",
     "@hookform/resolvers": "^3.1.1",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^4.16.2",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.12.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -33,25 +31,24 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@stripe/stripe-js": "^3.0.10",
+    "@stripe/react-stripe-js": "^1.16.5",
+    "@stripe/stripe-js": "^1.46.0",
     "@studio-freight/lenis": "^1.0.40",
     "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^4.29.19",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "axios": "^1.6.8",
+    "@types/node": "18.15.3",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.14",
     "gsap": "^3.12.5",
-    "http-status-codes": "^2.3.0",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.358.0",
-    "micro-cors": "^0.1.1",
-    "next": "14.1.0",
-    "next-auth": "^4.24.7",
+    "micro": "^10.0.1",
+    "next": "13.2.4",
+    "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
+    "prisma": "^4.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
@@ -60,27 +57,24 @@
     "react-intersection-observer": "^9.5.2",
     "sharp": "^0.32.1",
     "sonner": "^1.4.3",
-    "stripe": "^12.18.0",
+    "stripe": "^11.11.0",
     "svix": "^1.21.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.1",
     "typescript": "5.1.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
-    "autoprefixer": "latest",
+    "autoprefixer": "^10.4.14",
     "eslint": "latest",
     "eslint-config-next": "14.1.0",
-    "postcss": "latest",
-    "pretty-quick": "^3.1.3",
-    "prisma": "^4.16.2",
-    "tailwindcss": "latest",
-    "typescript": "latest"
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
