--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
