--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@types/react-dom": "18.0.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.14",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.18",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.358.0",
