--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.12.0",
     "@radix-ui/react-accordion": "^1.1.2",
