--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@types/react-dom": "18.0.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "embla-carousel-autoplay": "^8.0.0",
-    "embla-carousel-react": "^8.0.0",
+    "embla-carousel-autoplay": "8.0.0-rc17",
+    "embla-carousel-react": "8.0.0-rc17",
     "framer-motion": "^11.0.18",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
