--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,14 @@
       {
         "name": "next"
       }
-    ],
-    "strictNullChecks": true
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "components/LoadingScreen/LoadingScreen.js"
+  ],
   "exclude": ["node_modules"]
 }
