--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next": "13.2.4",
     "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
+    "prop-types": "^15.8.1",
     "prisma": "^4.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -68,6 +69,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3",
+    "@vercel/analytics": "^1.0.0",
     "zod": "^3.21.4",
     "zustand": "^4.5.2"
   },
@@ -80,6 +82,7 @@
     "eslint": "latest",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2"
   }
 }
