--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe/webhooks"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "1.0.0",
     "@hookform/resolvers": "^3.1.1",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -37,9 +38,11 @@
     "@stripe/stripe-js": "^1.46.0",
     "@studio-freight/lenis": "^1.0.40",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "@types/micro-cors": "^0.1.5",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "8.0.0-rc17",
@@ -49,11 +52,12 @@
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.358.0",
     "micro": "^10.0.1",
-    "next": "13.2.4",
+    "micro-cors": "^0.1.1",
+    "next": "13.4.4",
     "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
-    "prop-types": "^15.8.1",
     "prisma": "^4.12.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
@@ -69,7 +73,6 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.1",
     "typescript": "5.1.3",
-    "@vercel/analytics": "^1.0.0",
     "zod": "^3.21.4",
     "zustand": "^4.5.2"
   },
