--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "components/LoadingScreen/LoadingScreen.js"
+    "pages/api/auth/d",
+    "pages/api/auth/[...nextauth]"
   ],
   "exclude": ["node_modules"]
 }
